--- a/npcs/Need Editin/gleadric_to_cujulo.yaml
+++ b/npcs/Need Editin/gleadric_to_cujulo.yaml
@@ -1,71 +1,3 @@
-﻿#
-# Vibrant Games NPC file format.
-#
-# For long fields, we should be able to embed <html-tag>...</html-tag>s,
-# if everyone is cool with that approach.  OR we could use markdown instead.
-#
-# HTML requires more discipline -- we need to come up with a CSS stylesheet,
-# and stick to using the styles defined in our stylesheet.  Markdown is
-# simpler, because we can convert and automagically apply the stylesheet.
-#
-# Long fields are of the form:
-#
-#     field: |
-#       TEMPLATE
-#       MORE TEMPLATE
-#
-# For example, with HTML tags:
-#
-#     field: |
-#       <p> Gorbonzonger the goblin is a very bad goblin.
-#       He likes to beat up kobolds. </p>
-#       <p class="small"> Kobolds deserve it, anyway. </p>
-#       <p> Gorbonzonger has an amulet made of camphor
-#       and a very long shopping list that contains many
-#       items, some very few of which include: </p>
-#       <ul>
-#       <li> toilet paper </li>
-#       <li> broccoli </li>
-#       </ul>
-#
-# Or with Markdown:
-#
-#     field: |
-#       Gorbonzonger the goblin is a very bad goblin.  He likes to beat up kobolds.
-#       Kobolds deserve it, anyway.
-#       Gorbonzonger has an amulet made of camphor and a very long shopping list that contains many items, some very few of which include:
-#       - toilet paper
-#       - broccoli
-#
-# (There might be other formatting systems worth considering, too!)
-#
-
-#
-# Currently there is no schema for this template.
-# It will take some time to create a validating schema, so that,
-# for example, many fields are optional, but some fields are
-# required; enumerated fields are only allowed to have certain
-# values; and so on.
-#
-# Once the validating schema is created (probably using
-# Open API syntax, unless anyone has any preferences), we'll
-# be able to validate submissions and accept / reject if we choose.
-#
-# Also the validating file format is the ONLY place we do
-# content validation.  The database and user interface remain
-# agnostic to the validation rules (although the submission
-# UI will be set up to make it easy to e.g. pull down enumerated
-# values).  This allows us to change the schema in ONE PLACE
-# ONLY, not have to modify multiple components (UI, database,
-# future mobile apps, etc).  The file format validator is
-# the arbiter of what's allowed and what isn't.
-#
-
-#
-# Template NPC:
-#
-
----
 
 #
 # Preliminary fields that describe this overall file:
@@ -83,27 +15,33 @@ metadata:
   # For now, I suggest: convert the character name to lower case,
   # and replace all spaces and punctuation with underscores (_)
   #
-  id: goronk
+  id: gleadric_to_cujulo
 
   #
   # The name of the submitter (your name).
   #
-  author: Mike Rigby
+  author: vibrantgames
 
   #
   # Email address of the submitter.
   #
-  email: rigbyma@hotmail.com
+  # WordPress to YAML conversion:
+  # Unfortunately I do not see the author email
+  # addresses anywhere in the export file.  :(
+  # I guess we decided it was not an important field.
+  # This was a pretty bad oversigh.  :(
+  #
+  email: UNKNOWN@example.com
 
   #
   # Date the NPC was created.
   # Must be in ISO 8601 format.
   # You can include the time if you want.
   #
-  # E.g. "2021-12-31"
-  #      "2021-12-31 23:59:59"
+  # E.g. 2021-12-31
+  #      2021-12-31 23:59:59
   #
-  date: "2021-05-27"
+  date: 2021-02-05 17:27:12
 
   #
   # Arbitrary labels that are opaque to the system, only
@@ -113,9 +51,7 @@ metadata:
   # Optional.
   #
   labels:
-  - label_template_1: TEMPLATE
-  - label_template_2: TEMPLATE
-  - label_template_3: TEMPLATE
+  - wordpress_id: 1361
 
   #
   # In future more metadata will likely be needed.
@@ -134,7 +70,7 @@ npc:
   # Required.
   # Max length: ...
   #
-  name: Goronk
+  name: Gleadric &amp; Cujunoa
 
   #
   # The NPC artwork.
@@ -146,7 +82,7 @@ npc:
   # For now let us keep all images in one directory,
   # at least until that becomes a scaling nightmare.
   #
-  image: TEMPLATE_McTEMPLATESON.jpg
+  # image: NO_ARTWORK_AT_TIME_OF_CONVERSION
 
   #
   # Race, class, etc.
@@ -165,7 +101,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: older adult
 
     #
     # Races (case insensitive):
@@ -187,7 +123,7 @@ npc:
     # Required.
     # Max length: ...
     #
-    race: Hobgoblin
+    race: firbolg
 
     #
     # The sub-race can be anything.
@@ -196,7 +132,7 @@ npc:
     # Optional.  Can be commented out.
     # Max length: ...
     #
-    sub-race: N/A
+    # sub-race: NONE.
 
     #
     # Pronouns (case insensitive):
@@ -206,7 +142,7 @@ npc:
     #
     # Required.
     #
-    pronouns: he/him
+    pronouns: they/them
 
     #
     # Occupation(s).
@@ -215,8 +151,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Mercenary
-    
+    - Fur and Skins Trader
 
     #
     # D & D classes (case insensitive):
@@ -224,7 +159,7 @@ npc:
     # - artificer
     # - barbarian
     # - bard
-    # - blood hunter
+    # - bloodhunter
     # - cleric
     # - druid
     # - fighter
@@ -239,30 +174,7 @@ npc:
     #
     # Required.
     #
-    class: Fighter
-
-    #
-    # D & D subclasses (case insensitive):
-    # - civilian
-    # - alchemist
-    # - Path of the Berserker
-    # - College of Lore
-    # - Order of the Profane Soul
-    # - Grave Domain
-    # - Cirlce of the Moon
-    # - Battle Master
-    # - Way of Shadow
-    # - Oath of Redemption
-    # - Gloom Stalker
-    # - Thief
-    # - Path of the Spirit
-    # - Aberrant Mind
-    # - Hexblade
-    # - School of Abjuration
-    #
-    # Required.
-    #
-    subclass: Battle Master
+    class: shaman
 
     #
     # Class level.
@@ -271,7 +183,7 @@ npc:
     # Required.
     # Integer.
     #
-    level: 3
+    level: 5
 
     #
     # Alignments (case insensitive):
@@ -287,7 +199,7 @@ npc:
     #
     # Required.
     #
-    alignment: Lawful Evil
+    alignment: neutral good
 
     #
     # Alignment tendencies:
@@ -295,8 +207,6 @@ npc:
     #
     # Optional.
     #
-    tendencies:
-    - N/A
 
     #
     # Languages the character speaks
@@ -310,9 +220,10 @@ npc:
     # 0 o more.  (I.e. optional, but most characters speak at least 1.)
     #
     languages:
+    - Firbolg
     - Common
-    - Goblin
-    - Undercommon
+    - Elvish
+    - Giant
 
     #
     # Factions:
@@ -325,29 +236,19 @@ npc:
     #   role: Associate Professor of Lockpicking
     # - id: union_of_seamstresses
     #   name: Union of Seamstresses
-    #   role: Window dressing    # - id: cult_of_sky_anthologies
+    #   role: Window dressing
+    # - id: cult_of_sky_anthologies
     #   name: Cult of Sky Anthologies
     #   role: Going Clear Sky pastor
     #
     # Optional.  0 or more.
     #
-    factions:
-    - id: mercenary_militia
-      name: Mercenary Militia
-    - id: adventurer_s_guild
-      name: Adventurer's Guild
-    - id: hobgoblin_goblin_clan
-      name: Hobgoblin/Goblin Clan
 
     #
     # Adjectives or other tags that can be used for searching.
     #
     # Optional.  0 or more.
     #
-    adjectives:
-    - Gruff
-    - Capable
-    - Dangerous
 
   improv:
 
@@ -362,7 +263,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  Looking to hire a mercenary fighter to even out the odds? Goronk is your man...err... hobgoblin
+    introduction: A stall displays numerous quality tanned hides and furs from iron racks. "Lovely, huh?" A Firbolg asks, chewing on jerky
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -373,7 +274,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    appearance:   5'5", Broad as a barn. Deep red skin, lots of scars and some pretty top notch armor. Very well dressed for his kind
+    appearance:   Tall &amp; stocky. Grey fur. Long wild deep blue hair and beard. Patched hides &amp; leathers. Tiny bones and flora tied to hair
 
     #
     # Expressions: things the character says all the time, making their speech distinctive.
@@ -389,9 +290,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:
-    - "You are weak!"
-    - "The money pays for food and weapons, but I fight because those who don't are weak and pathetic"
+    expressions: $characters$ "Eek. Da dreamers be frownin"; "Long days make good pay"; "Right, right, right. Think it through";
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -404,7 +303,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Picks at his scars
+    mannerisms:   Taps head and body in various places in various sequences. Points out overly formal things. Refers to self in 3rd person
 
   acting:
     #
@@ -414,7 +313,7 @@ npc:
     # ???Maximum length???
     #
     motivations: |
-      Proving his martial prowess, building his reputation, money
+      To resist the industrial and technological innovations and cultural change and thus rebel against political structures.
 
     #
     # Passions:
@@ -423,7 +322,7 @@ npc:
     # ???Maximum length???
     #
     passions: |
-      Fighting. His strength is the basis of his identity
+      Nature. Protecting Lycanthropes. Equality. Socialism. 
 
     #
     # Vulnerabilities:
@@ -431,8 +330,6 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    vulnerabilities: |
-      Ego, quick to anger, doesn't know when to back down
 
     #
     # Secrets:
@@ -440,8 +337,8 @@ npc:
     # Required.
     # ???Maximum length???
     #
-    secrets: | 
-      He really does like the money and the comforts it buys him
+    secrets: |
+      His Shamanic Calling of Dreams attacks his psyche with demands to tear down royal lineages.
 
   #
   # The D & D stats block:
@@ -449,14 +346,14 @@ npc:
   #
   stats:
     armour-class: 16
-    hit-points: 38
+    hit-points: 54
     speed: 30
-    str: 18
-    dex: 13
-    con: 13
-    int: 15
-    wis: 9
-    cha: 11
+    str: 13
+    dex: 15
+    con: 9
+    int: 9
+    wis: 16
+    cha: 15
 
   #
   # Special characteristics.
@@ -467,34 +364,20 @@ npc:
   #
   specialties:
     skills:
-    - Hobgoblin Abilities:
-      - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
-        Martial Training: You are proficient with two martial weapons of your choice and with light armor.
-        Saving Face: Hobgoblins are careful not to show weakness in front of their allies, for fear of losing status. If you miss with an attack roll or fail an ability check or a saving throw, you can gain a bonus to the roll
-                     equal to the number of allies you can see within 30 feet of you
-      Fighter Abilities:
-      - Fighting Style: Two Weapon Fighting
-        Second Wind: Bonus Action to regain 1d10 + 
-        Action Surge: Once every short/long rest can take an extra action
-      Battle Master Abilities:
-      - Combat Superiority: 
-        - Description: 4 Superiority Dice. Saving Throw DC 13
-          Maneuvers:
-          - Disarming Attack
-          - Menacing Attack
-          - Trip Attack
-         Student of War: Proficient in Smith's Tools
-
-    special-abilities:
-    - Proficiencies: Survival, Intimidation   
+    - Survival; Nature; Athletics; Perception; Insight; Tanning; Skinning; Fabrics &amp; Textiles; Stealth
+    special-abilities: |
+      Detect Magic; Disguise Self
+      |
+      Hidden Step; Shamanic Calling; Spirit Magic; Shamanic Invocations; Blessings of Dream; Dreamrender; Fauna Shaman; Gift of Sight;  Glimpse the Path
+      |
+      Silent Image; Sleep; Phantasmal Force; Suggestion; Major Image; Sending
+      |
+      Spells: 0 - 2; 1 - 3; 2 - 2
     attacks: |
-      2 attacks with 2 Long Swords
+      Quarterstaff
     combat-tactics: |
-      Will use his Combat Maneuvers to outwit opponents. Will never shy away from a fight
-    special-equipment:
-    - 2x +1 Long swords
-    - Half Plate
-                                                                   
+      Gleadric will retract from conflict. Cujoloa will ferciously use his magicks and invocations to down combatants.
+
   profile:
 
     #
@@ -505,11 +388,8 @@ npc:
     # No length limit for now.
     #
     background-story: |
-      Like most of his kind Goronk finds his identity by proving his martial prowess. Those who don't or won't fight are weak in his eyes. He doesn't trust magic users, he sees it as a crutch and believes that martial weapons
-      are the only way to go. He's fairly easy to barter with for his services as hes more concerned with building his reputation as a fighter than he is with the money side of things. He's completely unconcerned with the moral
-      side of his profession and will just as happily work with raiders raiding a village as he would fighting bad guys, as long as he gets to fight
+      <p>Gleadric was raised in a Firbolg stronghold in the remote forests of Yyl on the outskirts of known civilization. The pivoting day in his youth, when his shamanic calling took control of his dreams and appended them to his woken life, was nearly crippling at first; changing him from the day-to-day gentle tenderer to flora into a seemingly secretive tanner and collector of furs.</p><p><i>"You've changed."</i> One of his closest friends imparted, <i>"but...change is life."</i> He patted Gleandric on the back while Cujuloa continued stripping a large Bison of it's hide.</p><p>Gleadric became two spirits inhabiting one physical body. Cujuloa was largely in charge of his daily productive activities - invoking dreams in his waking life and providing soft, warm dreams to his peoples - while Gleadric remained in control of his interactions with his community. However, Cujuloa demanded that they take their firm beliefs in equality and profound spirituality to the civilized communities and that they find new means and ways to bring peoples back to the basic love of for flora and fauna. They believe that by building room in the market for impressive hide and fur trade - a return to more primitive and anarchic ways - while impressing the importance of adhering to dreams over the purported reality of the waking world; that this will bring peoples back to their essential being.</p><p>Their goals, along with their split psyche, make social appearances, well, a challenge in situations relying on a finely detailed social contract. They come across to most as wild or 'crazy', but upon closer inspection and interactions, their distilled spirituality leaves a mark of genuine good.</p><p>Depending on which spirit is taking charge, they refer to themselves in 3rd person - either Gleadric or Cujuloa.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -518,6 +398,16 @@ npc:
     # Required.
     # No length limit for now.
     #
-    personality: |
-      5'5", Broad as a barn. Deep red skin, lots of scars and some pretty top notch armor. Very well dressed for his kind
-  
+
+  #
+  # Content that does not get displayed, but could be useful
+  # to humans.  Includes review comments, notes about what to
+  # do for the NPC art, or whatever else we need.
+  #
+  # Optional.
+  #
+  uncategorized:
+  - wp:status: publish
+  - subclass: Speaker of Dreams
+  - _yoast_wpseo_focuskeywords: []
+  - _yoast_wpseo_keywordsynonyms: [""]
