--- a/npcs/glohrimoore_flintback.yaml
+++ b/npcs/glohrimoore_flintback.yaml
@@ -298,7 +298,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -313,7 +312,6 @@ npc:
     languages:
     - Common
     - Dwarvish
-
 
     #
     # Factions:
@@ -384,7 +382,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Hail Herses! These metals aren't Dwarven!", "Light reveals Truth. Honesty, the light.", "Bring thee out the shadows!"
+    expressions:
+    - "Hail Herses! These metals aren't Dwarven!"
+    - "Light reveals Truth. Honesty, the light."
+    - "Bring thee out the shadows!"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -408,7 +409,7 @@ npc:
     #
     motivations: |
       To produce the best quality lanterns for travel and city use. To enlighten other races of discrimination Dwarves face
-      
+
     #
     # Passions:
     #
@@ -417,7 +418,7 @@ npc:
     #
     passions: |
       Fire. Smithing. Equality. Bringing more light into a world he feels is beleaguered by darkness
-      
+
     #
     # Vulnerabilities:
     #
@@ -426,7 +427,7 @@ npc:
     #
     vulnerabilities: |
       N/A
-      
+
     #
     # Secrets:
     #
@@ -435,8 +436,7 @@ npc:
     #
     secrets: | 
       N/A
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -461,43 +461,42 @@ npc:
   #
   specialties:
     skills:
-   - - Dwarf Abilities:
-       - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
-       - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-       - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus                      
-                                   
-   - - Cleric Abilities:
-       - Spellcasting: DC16
-         Cantrips: Guidance, Thaumaturgy, Resistance, Sacred Flame, Mending
-         1st Level: Detect Magic, Bane, Bless, Cure Wounds
-         2nd Level: Hold Person, Spiritual Weapon, Continual Flame
-         3rd Level: Dispel Magic, Create Food and Water, Spirit Guardians
-         4th Level: Banishment, Control Water, Stone Shape
-         5th Level: Flame Strike, Greater Restoration, 
-       - Channel Divinity: Turn Undead, Destroy Undead, Artisan's Blessing 
-       - Divine Intervention: Can call her patron to intervene on her behalf
-
-   - - Forge Domain Abilities:
-       - Spellcasting: DC 16
-         1st Level: Identify, Searing Smite
-         3rd Level: Heat Metal, Magic Weapon
-         5th Level: Elemental Weapon, Protection from Energy
-         7th Level: Fabricate, Wall of Fire
-         9th Level: Animate Object, Creation
-       - Bonus Proficiencies: Proficiency with Heavy Armor and Smith's Tools
-       - Blessing of the Forge: you gain the ability to imbue magic into a weapon or armor. At the end of a long rest, you can touch one nonmagical object that is a suit of armor or a simple or martial weapon. Until the end of 
-                                your next long rest or until you die, the object becomes a magic item, granting a +1 bonus to AC if it’s armor or a +1 bonus to attack and damage rolls if it’s a weapon. Once you use this feature,
-                                you can’t use it again until you finish a long rest.
-       - Channel Divinity - Artisans Blessing: you can use your Channel Divinity to create simple items. You conduct an hour-long ritual that crafts a nonmagical item that must include some metal; a simple or martial weapon, a 
-                                               suit of armor, ten pieces of ammunition, a set of tools, or another metal object. The creation is completed at the end of the hour, coalescing in an unoccupied space of your choice 
-                                               on a surface within 5 feet of you. The thing you create can be something that is worth no more than 100 gp. As part of this ritual, you must lay out metal, which can include coins, 
-                                               with a value equal to the creation. The metal irretrievably coalesces and transforms into the creation at the ritual’s end, magically forming even nonmetal parts of the creation. 
-                                               The ritual can create a duplicate of a nonmagical item that contains metal, such as a key, if you possess the original during the ritual.
-       - Soul of the Forge: your mastery of the forge grants you special abilities; You gain resistance to fire damage. While wearing heavy armor, you gain a +1 bonus to AC
-       - Divine Strike: you gain the ability to infuse your weapon strikes with the fiery power of the forge. Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8
-                        fire damage to the target. When you reach 14th level, the extra damage increases to 2d8.
-
+    - Dwarf Abilities:
+      - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+                      instead of his normal Proficiency Bonus
+      Cleric Abilities:
+      - Spellcasting:
+        - Description: DC16
+          Cantrips: Guidance, Thaumaturgy, Resistance, Sacred Flame, Mending
+          1st Level: Detect Magic, Bane, Bless, Cure Wounds
+          2nd Level: Hold Person, Spiritual Weapon, Continual Flame
+          3rd Level: Dispel Magic, Create Food and Water, Spirit Guardians
+          4th Level: Banishment, Control Water, Stone Shape
+          5th Level: Flame Strike, Greater Restoration, 
+        Channel Divinity: Turn Undead, Destroy Undead, Artisan's Blessing 
+        Divine Intervention: Can call her patron to intervene on her behalf
+      Forge Domain Abilities:
+      - Spellcasting:
+        - Description: DC 16
+          1st Level: Identify, Searing Smite
+          3rd Level: Heat Metal, Magic Weapon
+          5th Level: Elemental Weapon, Protection from Energy
+          7th Level: Fabricate, Wall of Fire
+          9th Level: Animate Object, Creation
+        Bonus Proficiencies: Proficiency with Heavy Armor and Smith's Tools
+        Blessing of the Forge: you gain the ability to imbue magic into a weapon or armor. At the end of a long rest, you can touch one nonmagical object that is a suit of armor or a simple or martial weapon. Until the end of
+                               your next long rest or until you die, the object becomes a magic item, granting a +1 bonus to AC if it’s armor or a +1 bonus to attack and damage rolls if it’s a weapon. Once you use this feature,
+                               you can’t use it again until you finish a long rest.
+        Channel Divinity - Artisans Blessing: you can use your Channel Divinity to create simple items. You conduct an hour-long ritual that crafts a nonmagical item that must include some metal; a simple or martial weapon, a 
+                                              suit of armor, ten pieces of ammunition, a set of tools, or another metal object. The creation is completed at the end of the hour, coalescing in an unoccupied space of your choice
+                                              on a surface within 5 feet of you. The thing you create can be something that is worth no more than 100 gp. As part of this ritual, you must lay out metal, which can include coins,
+                                              with a value equal to the creation. The metal irretrievably coalesces and transforms into the creation at the ritual’s end, magically forming even nonmetal parts of the creation.
+                                              The ritual can create a duplicate of a nonmagical item that contains metal, such as a key, if you possess the original during the ritual.
+        Soul of the Forge: your mastery of the forge grants you special abilities; You gain resistance to fire damage. While wearing heavy armor, you gain a +1 bonus to AC
+        Divine Strike: you gain the ability to infuse your weapon strikes with the fiery power of the forge. Once on each of your turns when you hit a creature with a weapon attack, you can cause the attack to deal an extra 1d8
+                       fire damage to the target. When you reach 14th level, the extra damage increases to 2d8.
 
     special-abilities:
     - Proficiencies: Survival; Smithing Tools   
@@ -507,7 +506,7 @@ npc:
       Glohrimoore is essentially fearless. Particularly if faced with what he perceives as an evil combatant. Of course, this has its pros - that he is a brave fighter - and its cons - that he is foolhardy in battle and takes short-sighted risks.
     special-equipment:
     - N/A
-                                                                   
+
   profile:
 
     #
@@ -522,7 +521,6 @@ npc:
       dependence upon fire and light. As a youngster, he was always fascinated with the forging processes, but his attention was more focused on how fire and light were the central mechanism for the greatest creations. He
       turned his attention away from weapon and armor crafting and instead towards the construction of the finest lanterns for travellers, city streets, and beyond.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -533,32 +531,3 @@ npc:
     #
     personality: |
       Stout, weathered skin. Oily, singed, earth-colored garb. Tangled, braided dark brown hair
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
