--- a/npcs/golomir_craag.yaml
+++ b/npcs/golomir_craag.yaml
@@ -216,7 +216,6 @@ npc:
     #
     occupation:
     - Cunning Man, Hedge Wizard
-    
 
     #
     # D & D classes (case insensitive):
@@ -298,7 +297,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -315,7 +313,6 @@ npc:
     - Goblin
     - Orcish
     - Sylvan
-
 
     #
     # Factions:
@@ -389,7 +386,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Religion is for the weak. The faeries provide more hope and healing"; "Can call me cunning but I divine more than luck"
+    expressions:  
+    - "Religion is for the weak. The faeries provide more hope and healing"
+    - "Can call me cunning but I divine more than luck"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -413,7 +412,7 @@ npc:
     #
     motivations: |
       Driven to unearth folklore of various rural regions. Seeks to downplay any influence of witches. Spreads literacy
-      
+
     #
     # Passions:
     #
@@ -422,7 +421,7 @@ npc:
     #
     passions: |
       Golomir must wander. Loves creating trinkets and bobbles, like amulets and omens
-      
+
     #
     # Vulnerabilities:
     #
@@ -431,7 +430,7 @@ npc:
     #
     vulnerabilities: |
       N/A
-      
+
     #
     # Secrets:
     #
@@ -440,8 +439,7 @@ npc:
     #
     secrets: | 
       Golomir gained access to the Fey wild through a pact with an Old Forgotten God considered evil
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -466,44 +464,45 @@ npc:
   #
   specialties:
     skills:
-   - - Orc Abilities:
-       - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
-       - Aggressive: As a bonus action, you can move up to your speed toward an enemy of your choice that you can see or hear. You must end this move closer to the enemy than you started
-       - Primal Intuition: Proficient in Insight and Survival
-       - Powerful Build: count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
-       - Relentless Endurance: Once per long rest, when reduced to 0hp but not outright killed, can drop to 1hp instead
-       - Savage Attack: When scoring a critical hit on a melee weapon attack, can roll an additonal damage dice of the weapons type and add it to the total                      
-                                   
-   - - Ranger Abilities:
-       - Ranger Spellcasting: Spell DC 13 
-          - 1st Level: Hunter's Mark, Goodberry, Wild Cunning, Animal Friendship 
-          - 2nd Level: Pass Without Trace, Lesser restoration, Animal Messenger
-       - Favored Enemy:  - Has advantage on Wisdom (Survival) checks to track her Favored enemies, as well as on Intelligence Checks to recall information about them
-       - Natural Explorer: Favored Terrain - 
+    - Orc Abilities:
+      - Darkvision: can see in dim light within 60 feet of you as if it were bright light, and in darkness as if it were dim light. You can't discern color in darkness, only shades of gray           
+        Aggressive: As a bonus action, you can move up to your speed toward an enemy of your choice that you can see or hear. You must end this move closer to the enemy than you started
+        Primal Intuition: Proficient in Insight and Survival
+        Powerful Build: count as one size larger when determining your carrying capacity and the weight you can push, drag, or lift
+        Relentless Endurance: Once per long rest, when reduced to 0hp but not outright killed, can drop to 1hp instead
+        Savage Attack: When scoring a critical hit on a melee weapon attack, can roll an additonal damage dice of the weapons type and add it to the total                                                  
+      Ranger Abilities:
+      - Ranger Spellcasting: 
+        - Description: Spell DC 13 
+          1st Level: Hunter's Mark, Goodberry, Wild Cunning, Animal Friendship 
+          2nd Level: Pass Without Trace, Lesser restoration, Animal Messenger
+        Favored Enemy:  Has advantage on Wisdom (Survival) checks to track her Favored enemies, as well as on Intelligence Checks to recall information about them
+        Natural Explorer: 
+        - Decription: Favored Terrain
+          Additional Information:
           - Difficult Terrain doesn't slow your group's Travel
           - Your group can't become lost except by magical means
           - Even when you are engaged in another Activity While Traveling (such as Foraging, navigating, or tracking), you remain alert to danger
           - If you are traveling alone, you can move stealthily at a normal pace
           - When you Forage, you find twice as much food as you normally would
           - While Tracking other creatures, you also learn their exact number, their sizes, and how long ago they passed through the area
-       - Fighting Style: Archery - gains a +2 bonus to Attack Rolls made with Ranged Weapons
-       - Primeval Awareness: can use her action and expend one Ranger spell slot to focus her awareness on the region around her. For 1 minute per level of the spell slot she expends, she can sense whether the following 
-                             types of creatures are present within 1 mile of her (or within up to 6 miles in Favored terrain)- Aberrations, Celestials, Dragons, Elementals, fey, Fiends, and Undead. This feature doesn't 
-                             reveal the creatures' location or number.
-       - Extra Attack: Can Attack twice, instead of once, whenever she takes the Attack action on her Turn
-
-   - - Fey Wanderer Abilities:
-       - Dreadful Strikes: you can augment your weapon strikes with mind-scarring magic, drawn from the gloomy hollows of the Feywild. When you hit a creature with a weapon, you can deal an extra 1d4 psychic damage to the
-                           target, which can take this extra damage only once per turn.
-       - Fey Wanderer Magic: Spell DC 13
-          - 1st Level: Charm Person  
-          - 2nd Level: Misty Step
-       - Otherworldly Glamour: your fey qualities give you a supernatural charm. As a result, whenever you make a Charisma check, you gain a bonus to the check equal to your Wisdom modifier
-       - Beguiling Twist: the magic of the Feywild guards your mind. You have advantage on saving throws against being charmed or frightened. In addition, whenever you or a creature you can see within 120 feet of you succeeds
-                          on a saving throw against being charmed or frightened, you can use your reaction to force a different creature you can see within 120 feet of you to make a Wisdom saving throw against your spell save
-                          DC. If the save fails, the target is charmed or frightened by you (your choice) for 1 minute. The target can repeat the saving throw at the end of each of its turns, ending the effect on itself on a
-                          successful save
-
+        Fighting Style: Archery - gains a +2 bonus to Attack Rolls made with Ranged Weapons
+        Primeval Awareness: can use her action and expend one Ranger spell slot to focus her awareness on the region around her. For 1 minute per level of the spell slot she expends, she can sense whether the following 
+                            types of creatures are present within 1 mile of her (or within up to 6 miles in Favored terrain)- Aberrations, Celestials, Dragons, Elementals, fey, Fiends, and Undead. This feature doesn't 
+                            reveal the creatures' location or number.
+        Extra Attack: Can Attack twice, instead of once, whenever she takes the Attack action on her Turn
+      Fey Wanderer Abilities:
+      - Dreadful Strikes: you can augment your weapon strikes with mind-scarring magic, drawn from the gloomy hollows of the Feywild. When you hit a creature with a weapon, you can deal an extra 1d4 psychic damage to the
+                          target, which can take this extra damage only once per turn.
+        Fey Wanderer Magic: 
+        - Description: Spell DC 13
+          1st Level: Charm Person  
+          2nd Level: Misty Step
+        Otherworldly Glamour: your fey qualities give you a supernatural charm. As a result, whenever you make a Charisma check, you gain a bonus to the check equal to your Wisdom modifier
+        Beguiling Twist: the magic of the Feywild guards your mind. You have advantage on saving throws against being charmed or frightened. In addition, whenever you or a creature you can see within 120 feet of you succeeds
+                         on a saving throw against being charmed or frightened, you can use your reaction to force a different creature you can see within 120 feet of you to make a Wisdom saving throw against your spell save
+                         DC. If the save fails, the target is charmed or frightened by you (your choice) for 1 minute. The target can repeat the saving throw at the end of each of its turns, ending the effect on itself on a
+                         successful save
 
     special-abilities:
     - Proficiencies: Medicine; Animal Handling; Nature; Persuasion; Survival   
@@ -513,7 +512,7 @@ npc:
       Golomir is fierce in combat. He will begin by entangling foes with the chain attached to the hilt of his sickle and follow up with a vicious swipe
     special-equipment:
     - Aetheric Chain Sickle - A +1 chain sickle; as a magic effect chain can be used to pull an entangled target towards Golomir or Golomir towards the target after which Golomir receives an additional +2 to strike and damage
-                                                                   
+
   profile:
 
     #
@@ -532,7 +531,6 @@ npc:
       realms wandering with the aim of bringing joy to those he meets. Well known for his abilities as a 'cunning man' or 'hedge wizard', a sort of shamanic voodoo medicine practitioner, he believes that joy and the greater
       good is only achievable through spreading health and literacy.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -544,31 +542,3 @@ npc:
     personality: |
       Wiry. Wild curly blue-tinted hair. Veins surge beneath grey skin. Various bobbles hang from clothes. His shadow dances
   #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
